fix test_str range address and close Msgbox

--- a/clsCheck.cls
+++ b/clsCheck.cls
@@ -67,7 +67,7 @@ Set coll = recObj.getSameCode
 
 For Each it In coll
 
-    tmp = split(it, "-")(0)
+    tmp = Split(it, "-")(0)
     
     mydate = funObj.tranDate(tmp)
 
